--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "hugo --gc --minify -b http://www.alessiascudiero.info/"
+  command = "hugo --gc --minify -b $URL"
   publish = "public"
 
 [build.environment]
