--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,8 +18,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo academic resume theme powered by Wowchemy website builder.'
-    twitter: 'wowchemy'
+    description: 'Economics PhD student at Emory University'
   analytics:
     google_analytics: ''
     baidu_tongji: ''
@@ -38,17 +37,6 @@ header:
     show_day_night: true
     show_search: true
     highlight_active_link: true
-
-# Site footer
-
-footer:
-  copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
-    license:
-      enable: true
-      allow_derivatives: false
-      share_alike: true
-      allow_commercial: false
 
 # Localization
 
